RESOLVED FIXED82243
[Chromium] Crash in Canvas2DLayerChromium::pushPropertiesTo
https://bugs.webkit.org/show_bug.cgi?id=82243
Summary [Chromium] Crash in Canvas2DLayerChromium::pushPropertiesTo
Justin Novosad
Reported 2012-03-26 13:51:38 PDT
Related chromium bug: crbug.com/120078
Attachments
Patch (1.72 KB, patch)
2012-03-26 15:05 PDT, Justin Novosad
no flags
Justin Novosad
Comment 1 2012-03-26 15:05:04 PDT
James Robinson
Comment 2 2012-03-26 15:15:18 PDT
Comment on attachment 133902 [details] Patch R=me (we seem to have the same checks in updateCompositorResources)
WebKit Review Bot
Comment 3 2012-03-26 16:00:08 PDT
Comment on attachment 133902 [details] Patch Clearing flags on attachment: 133902 Committed r112165: <http://trac.webkit.org/changeset/112165>
WebKit Review Bot
Comment 4 2012-03-26 16:00:13 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.