[Chromium] Crash in Canvas2DLayerChromium::pushPropertiesTo https://bugs.webkit.org/show_bug.cgi?id=82243

Patch by Justin Novosad <junov@chromium.org> on 2012-03-26
Reviewed by James Robinson.

Adding null pointer check to prevent crash and texture object
validity check to prevent potential graphics glitch

* platform/graphics/chromium/Canvas2DLayerChromium.cpp:
(WebCore::Canvas2DLayerChromium::pushPropertiesTo):

Canonical link: https://commits.webkit.org/99602@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@112165 268f45cc-cd09-0410-ab3c-d52691b4dbfc